--- a/style.css
+++ b/style.css
@@ -1,3 +1,88 @@
 body {
     background: rgb(175, 25, 25);
 }
+
+/* install it */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+/* CSS Variables */
+:root {
+    /* main UI color */
+    --plyr-color-main: red;
+    /* audio controls background */
+    --plyr-audio-controls-background: green;
+    /* audio controls color */
+    --plyr-audio-control-color: yellow;
+
+    --plyr-audio-control-color-hover: purple;
+
+    --plyr-audio-progress-buffered-background: blue;
+
+    --plyr-audio-range-track-background: orange;
+    
+    --plyr-font-family: sans-serif;
+    --plyr-font-size-time: 32px;
+
+    --plyr-tooltip-background: fuchsia;
+    --plyr-tooltip-color: black; 
+
+    --plyr-control-icon-size: 32px;
+}
+
+body {
+  background-image: url(https://assets.codepen.io/16425/blackbg.jpg);
+  background-repeat: repeat;
+  font-family: "Open Sans", sans-serif;
+}
+
+/* Layout */
+main {
+  background-color: #b7142fbd; 
+  max-width: 1000px;
+  margin-inline: auto;
+}
+
+main img {
+    max-width: 100%;
+    display: block;
+}
+
+main h1 {
+  color: white;
+  text-align: center;
+}
+
+main article {
+  display: flex;
+  gap: 1em;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+  margin-top: 60px;
+}
+
+main article figure {
+  background: gray;
+  color: white;
+  padding: 1em;
+  margin: 0;
+}
+
+/* Media Query */
+@media  (max-width: 400px) {
+  
+  :root {
+    --plyr-font-size-time: 24px;
+    --plyr-control-icon-size: 24px;
+  }
+  
+  main h1 {
+    font-size: .85em;
+  }
+  
+  main article {
+    flex-direction: column;
+  }
+  
+  
+}
